# Learning-Smart-Contract-Security

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  state.json
.github/workflows/: ci.yml  ralph.yml
artifacts/: report.md
ralph_wiggum/: __init__.py  budget.py  cli.py  diff_review.py  escalation.py  invariants.py  kernel.py  killswitch.py  reporting.py  scoring.py  state.py
ralph_wiggum/agents/: __init__.py  fuzz_agent.py  graph_analysis.py  llm_synthesis.py  proof_agent.py  repair_agent.py  solodit.py  solodit_booster.py  static_scan.py
ralph_wiggum/tools/: __init__.py  foundry_runner.py  quick_linter.py  runner_pool.py  slither_runner.py  workbench_runner.py
ralph_wiggum/workbench/: __init__.py  entrypoints.py  secure_contracts.py  workbench.py
tests/: __init__.py  test_cli.py  test_determinism.py  test_diff_review.py  test_foundry_runner.py  test_fuzz_agent.py  test_graph_analysis.py  test_integration_harness.py  test_kernel_invariants.py  test_llm_gating.py  test_llm_synthesis.py  test_proof_repair_agents.py  test_reporting.py  test_scoreboard_trend.py  test_slither_runner.py  test_solodit_booster.py  test_solodit_kernel.py  test_static_scan.py  test_workbench_entrypoints.py
tests/fixtures/: slither.json
tests/fixtures/contracts/: OwnerVault.sol
tests/fixtures/llm/: response.json
tests/fixtures/replay_run/: state.json
tests/fixtures/snapshots/: report_output.md  score_output.md  scoreboard_run_a.json  scoreboard_run_a.md
tests/fixtures/solodit/: response.json
tests/fixtures/workbench/: slither_entrypoints.json
(+3 files in other folders)
